# prontuarioUFS

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  prontuario.db  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/database/: connection.py
backend/src/database/entities/: __init__.py  anamnese_entity.py  base_anamnese_entity.py  child_anamnese_entity.py  enums.py  food_plan_entity.py  paciente_entity.py  recordatory_entity.py  return_anamnese_entity.py
backend/src/models/: anamnese_model.py  base_anamnese_model.py  child_anamnese_model.py  food_plan_model.py  paciente_model.py  recordatory_model.py  return_anamnese_model.py
backend/src/routes/: anamnese_route.py  base_anamnese_route.py  child_anamnese_route.py  food_plan_route.py  paciente_route.py  recordatory_route.py  return_anamnese_route.py
backend/src/services/: anamnese_service.py  base_anamnese_service.py  child_anamnese_service.py  food_plan_service.py  paciente_service.py  recordatory_service.py  return_anamnese_service.py
backend/src/utils/: flatten.py  food_plan_pdf.py  pdf_styles.py
documentação/exemplosArquivos/: Copia de Copia de FICHA DE RECORDATORIO.docx  Copia de Crianca - Ficha de anamnese .docx  Copia de PLANO ALIMENTAR QUALITATIVO.docx  FICHA DE RETORNO.docx  Ficha de anamnese_2023 (1).docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AnamneseForm.jsx  PacienteForm.jsx
frontend/src/components/FoodPlanForm/: FoodPlanForm.jsx
frontend/src/pages/: Initial_page.jsx
(+80 files in other folders)
