[project]
name = "prontuario-backend"
version = "0.1.0"
description = "Backend do prontuário"
authors = [
    {name = "Rafael Nascimento"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-doc (==0.0.3)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.0)",
    "fastapi (==0.120.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "pillow (==12.0.0)",
    "pydantic (==2.12.3)",
    "pydantic-core (==2.41.4)",
    "reportlab (==4.4.5)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.44)",
    "starlette (==0.48.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.38.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
